# streampipe

./: Makefile  README.md  main.py  pyproject.toml  setup.py
StreamPipe.app/Contents/: Info.plist
StreamPipe.app/Contents/MacOS/: applet
StreamPipe.app/Contents/Resources/: applet.rsrc
StreamPipe.app/Contents/Resources/Scripts/: main.scpt
StreamPipe.app/Contents/_CodeSignature/: CodeResources
streampipe/: app.py  player.py  stream.py
streampipe/cmd/: stream.py
tests/: test_player.py
