[tool.poetry]
name = "streampipe"
version = "0.1.0"
description = ""
authors = ["Hebo <hebo@hey.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
py2app = "^0.22"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
