[tool.poetry]
name = "streampipe"
version = "0.2.2"
description = ""
authors = ["Hebo <hebo@hey.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
py2app = "^0.22"
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stream = 'streampipe.cmd.stream:run'

