[tool.poetry]
name = "streampipe"
version = "0.4.0"
description = ""
authors = ["Hebo <hi@salt.gg>"]

[tool.poetry.dependencies]
python = ">= 3.9"

[tool.poetry.dev-dependencies]
black = {version = "^22.10", allow-prereleases = true}
pytest = "^6.2.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stream = 'streampipe.cmd.stream:run'

